# defenseclaw

./: .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  USER.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cli/defenseclaw/: config.py  db.py  gateway.py  guardrail.py  llm.py  main.py  registry.py
cli/tests/: helpers.py  test_claw_inventory.py  test_cli_smoke.py  test_cmd_init.py  test_cmd_mcp.py  test_cmd_misc.py  test_cmd_plugin.py  test_cmd_skill.py  test_commands.py  test_config.py  test_gateway.py  test_guardrail.py  test_meta_analyzer.py  test_registry.py  test_scanners.py  test_tool_commands.py
cmd/defenseclaw/: main.go
collector/: README.md  builder-config.yaml  config.yaml
docs/: ARCHITECTURE.md  CONFIG_FILES.md  GUARDRAIL.md  GUARDRAIL_QUICKSTART.md  INSTALL.md  QUICKSTART.md  README.md  SPLUNK_APP.md  TESTING.md
extensions/defenseclaw/: package-lock.json  package.json  vitest.config.ts
guardrails/: defenseclaw_guardrail.py
internal/audit/: logger.go  logger_test.go  splunk.go  splunk_test.go  store.go
internal/cli/: allow.go  audit.go  block.go  daemon.go  init.go  list.go  policy.go  quarantine.go  root.go  scan.go  sidecar.go
internal/config/: actions.go  claw.go  config.go  config_test.go  defaults.go
internal/daemon/: daemon.go  daemon_test.go  proc_unix.go
internal/enforce/: mcp_enforcer.go  policy.go  sandbox.go  skill_enforcer.go
internal/gateway/: SPEC.md  api.go  client.go  frames.go  gateway_test.go  gateway_ws_test.go  health.go  inspect.go  litellm.go  provider.go  router.go  rpc.go  sidecar.go
internal/policy/: engine.go  engine_extended_test.go  types.go
internal/sandbox/: openshell.go  policy.go
internal/scanner/: aibom.go  mcp.go  skill.go
internal/telemetry/: alerts.go  lifecycle.go  metrics.go  policy.go  provider.go  provider_test.go  resource.go  runtime.go  scan.go  testing.go
internal/tui/: mcps.go  skills.go
internal/watcher/: watcher.go  watcher_test.go
policies/: default.yaml  permissive.yaml  strict.yaml
scripts/: install-dev.sh  setup-scanners.sh  test-e2e-cli.py  test-e2e-tool-block.sh
test/: siege-urls.txt
test/bench/: .gitignore  (+6 more)
(+212 files in other folders)
